plugins {
    id 'java'
    id 'checkstyle'
    id 'org.jetbrains.kotlin.jvm'
}

group = 'com.sprint.mission'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    implementation "com.fasterxml.jackson.core:jackson-databind:2.0.1"
}

test {
    useJUnitPlatform()
}

checkstyle {
    toolVersion = '1.0' // Checkstyle 버전
    configFile = rootProject.file('checkstyle.xml') // Checkstyle 설정 파일 경로
}

// 이하 필요시에만 사용
tasks.withType(Checkstyle) {
    reports {
        html.required = true // HTML 보고서 생성
        xml.required = false // XML 보고서는 비활성화
    }
}
kotlin {
    jvmToolchain(17)
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}